fix: improved contrast ratio score of header links, buttons and side nav links

--- a/src/components/dark-mode.css
+++ b/src/components/dark-mode.css
@@ -3,7 +3,8 @@
     border: none;
 }
 .dark-body .header-button:hover {
-    border: 0.2px solid rgba(97, 97, 97, 1);
+    border: 0.2px solid rgb(162, 162, 162);
+    background: rgb(75, 75, 75);
 }
 .dark-body .header-search-div,
 .dark-body .each-text-input-block-div {
@@ -38,8 +39,9 @@
     color: rgb(190, 190, 191);
 }
 .dark-body .header-nav-link:hover,
-.dark-body .active-nav-link {
-    color: rgb(215, 215, 215);
+.dark-body .active-nav-link,
+.dark-body .side-nav-link:hover {
+    color: rgb(255, 255, 255);
 }
 .dark-body .side-body-div {
     color: #a1a1aa;
@@ -52,6 +54,9 @@
 .dark-body .introduction-heading,
 .dark-body .features-function  {
     color: white;
+}
+.dark-body .code-div {
+    background-color: #282c34;
 }
 .dark-body code {
     color: rgba(250, 250, 250);
@@ -72,4 +77,7 @@
     color: rgba(208, 208, 208, 0.981);
     background: rgba(48, 48, 48);
     border: 1px solid rgba(97, 97, 97, 1);
+}
+.dark-body .header-button-icon {
+    color: rgb(190, 190, 191);
 }
